# LDM-MCIDAS

./: COPYRIGHT  CUSTOMIZE  INSTALL  Makefile.in  ORIGIN  README.md  RELEASE_NOTES  aclocal.m4  configure  configure.in  cull.sed  ldmd.conf
decode/: 19982991906.nc  19982992000.nc  9912406.nldn  DCBPRO  DCNLDN  DCWPRO  Makefile.in  SATANNOT  SATBAND  SCHEMA  alarm.c  alarm.h  area2png.1  area2png.c  batch.k  bref1.raw  bref2.raw  bref3.raw  bref4.raw  brlr1.raw  cdfconvert  cdfsubs.c  cdftomd.1  cdftomd.c  commonsubs.c  cref.raw  csubs.c  decode_fsl1.c  decode_fsl2.c  decode_lgt.c  decode_ncprof.c  depend  ginisubs.c  gunrv2.1  gunrv2.c  gunrv2.f0  imgsubs.c  ldm-mcidas-pqact.conf.all  ldm-mcidas-pqact.conf.hourly  ldm_pipe_exec.sh  (+66 more)
docs/: index.html  ldm-mcidas-build.html  ldm-mcidas-download.html  ldm-mcidas-faq.html  ldm-mcidas-hottopics.html  ldm-mcidas-man.html  ldm-mcidas-pqact.conf.all  ldm-mcidas-pqact.conf.hourly  ldm-mcidas-pqact.conf.obsolete  ldm-mcidas-release.html  ldm-mcidas-support.html  ldm-mcidas-uniwisc.html  ldm-mcidas-use.html  ldm-mcidas-what.html  ldm-mcidas.README  ldm-mcidas.routepp
docs/2008/: gifs.tar  index.html  ldm-mcidas-build.html  ldm-mcidas-download.html  ldm-mcidas-faq.html  ldm-mcidas-hottopics.html  ldm-mcidas-man.html  ldm-mcidas-pqact.conf.all.html  ldm-mcidas-release.html  ldm-mcidas-support.html  ldm-mcidas-uniwisc.html  ldm-mcidas-use.html  ldm-mcidas-what.html  ldm-mcidas.INSTALL
libpng/: Makefile.in
port/: Makefile.in  acsite.m4  master.mk.in
port/cfortran/: Makefile.in
port/misc/: depend  (+11 more)
zlib/: Makefile.in  zutil.c
